# Git

./: file1.txt
Lab2/: CMakeLists.txt  test_blas.cpp
